header, 메인페이지 작업중

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,9 @@
   padding: 6rem;
   min-height: 100vh;
 }
+.test {
+  background: red !important;
+}
 
 .description {
   display: inherit;
@@ -97,7 +100,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +128,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
